# rust-supervisor-relay

./: .gitignore  ASSUMPTIONS.md  Cargo.toml  FINAL_REPORT.md  README.md  README.zh.md
examples/config/: dashboard-relay.local.yaml  dashboard-relay.yaml
manual/: dashboard-relay.md
src/: audit.rs  auth.rs  command.rs  config.rs  diagnostics.rs  error.rs  ipc_client.rs  lib.rs  main.rs  registration.rs  registry.rs  relay.rs  session.rs
tests/: legacy_protocol_rejection.rs  relay_command_contract_test.rs  relay_config_test.rs  relay_control_security_test.rs  relay_handshake_protocol_test.rs  relay_performance_test.rs  relay_registration_upsert_test.rs  relay_session_contract_test.rs  relay_stream_test.rs
tests/legacy_protocol_rejection/: legacy_messages_test.rs
tests/support/: mod.rs
