[package]
name = "rust-supervisor-relay"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
futures-util = "0.3"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.26"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
x509-parser = "0.16"

[dev-dependencies]
tempfile = "3"
